--- a/index.html
+++ b/index.html
@@ -1,10 +1,7 @@
 <!DOCTYPE html>
 <html>
-<head>
-	<title>Tatran</title>
-</head>
 <body>
-<h1>Tatran</h1>
+<h1>Hello World</h1>
 <p>I'm hosted with GitHub Pages.</p>
 </body>
 </html>
