--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html>
+<html><head>
+  <meta http-equiv="refresh"
+   content="0; url=https://dl.dropboxusercontent.com/u/16220179/Math/index.html">
+</head>
 <body>
 <h1>Hello World just now</h1>
 <p>I'm hosted with GitHub Pages.</p>
